2013-02-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Add option to configure the encryption algorithm in Extension Manager
	* Disable the audio feature on iOS devices

2013-02-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Cleanup audio file rendering
	* Fix audio player in IE7, IE9 and Opera
	* Fix audio player in IE8 (but may still be blocked depending on security settings)

2013-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Update the manual
	* Namespace the JavaScript functions

2013-02-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix max attempts message
	* Delete unused directories
	* Fix model html template insert for pi_base plugin

2013-02-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Add translation view helper with formal/informal salutation option
	* Cleanup configuration files
	* Add suggested HTML template insert (for pi_base)
	* Add captcha image and audio icon view helpers
	* Remove alias on SessionStorage class
	* Cleanup translation view helper
	* Require extension vhs 1.5.0
	* Remove requirement for vhs extension
	* Fix validation error translation
	* Cleanup image generator

2012-12-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Add captcha validator class

2012-12-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Migrate backend GD font maker to extbase

2012-11-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Move language labels to private resources directory
	* Migrate captcha image and audio generation to extbase

2012-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Move captcha media to private resources directory
	* Move javascript to public resources directory
	* Require TYPO3 6.0
	
2012-11-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Move original freecap to Contrib directory

2012-11-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix font maker script character encoding

2012-11-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Migrate localization files to xliff
	* Migrate font maker module to the use of typo3/mod.php
	* Add ext_autoload
