@@ -49,7 +49,7 @@ class AudioPlayerController extends \TYPO3\CMS\Extbase\Mvc\Controller\ActionCont
 	 */
 	public function initializeAction() {
 		// Get an instance of the word repository
-		$this->wordRepository = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance('SJBR\SrFreecap\Domain\Repository\WordRepository');
+		$this->wordRepository = $this->objectManager->get('SJBR\SrFreecap\Domain\Repository\WordRepository');
 	}
 
 	/**
