@@ -2,6 +2,7 @@
 
 	* Add option to configure the encryption algorithm in Extension Manager
 	* Disable the audio feature on iOS devices
+	* Use object manager to create object instances
 
 2013-02-12  Stanislas Rolland  <typo3@sjbr.ca>
 
